fixed borders overflowing the viewport

--- a/client/src/styles/RenegPanel.module.css
+++ b/client/src/styles/RenegPanel.module.css
@@ -1,9 +1,10 @@
 .renegPanel {
 	position: absolute;
 	top: 0;
-	right: 0;
+	right: 1vw;
 	width: 20vw;
 	height: 100vh;
+	box-sizing: border-box;
 	background-color: rgba(255, 255, 255, 0.8);
 	display: grid;
 	grid-template-rows: 1fr 1fr;
